--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,8 +11,15 @@
   },
   "dependencies": {
     "@tailwindcss/vite": "^4.1.17",
+    "framer-motion": "^12.23.24",
+    "lucide-react": "^0.553.0",
     "react": "^19.2.0",
-    "react-dom": "^19.2.0"
+    "react-bits": "^1.0.5",
+    "react-dom": "^19.2.0",
+    "react-icons": "^5.5.0",
+    "react-router": "^7.9.5",
+    "react-scroll": "^1.9.3",
+    "three": "^0.181.1"
   },
   "devDependencies": {
     "@eslint/js": "^9.39.1",
