--- a/backend/package.json
+++ b/backend/package.json
@@ -5,7 +5,8 @@
   "type": "module",
   "keywords": [],
   "scripts": {
-    "start": "node index.js",
+    "build": "npm install --prefix backend && npm install --prefix frontend && npm run build --prefix frontend",
+    "start": "npm run start --prefix backend",
     "dev": "nodemon index.js"
   },
   "author": "",
